--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-scrollspy": "^3.4.0"
