--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage" : "https://evanfeenstra.github.io/portfolio/",
+  "homepage" : " https://rachelhrodney.github.io/portfolio/",
   "eslintConfig": {
     "extends": "react-app"
   },
